--- a/posts/aside.css
+++ b/posts/aside.css
@@ -1,11 +1,11 @@
 aside, .aside {
- display: inline;
- float: right;
- position: relative;
- width: 20vw;
- margin-right: -22vw;
- font-size: 16px;
+  display: inline;
+  float: right;
+  position: relative;
+  width: 10vw;
+  margin-right: -402vw;
+  font-size: 24px;
 }
 main {
-  margin-right: 20%;
+  margin-right: 50%;
 }
